[#55190] Fix Tab Nav vertical spacing in Page Header
https://community.openproject.org/work_packages/55190

--- a/app/components/primer/open_project/page_header.pcss
+++ b/app/components/primer/open_project/page_header.pcss
@@ -66,7 +66,7 @@
   flex: 1 1 auto;
 }
 
-.PageHeader-tabNav {
+.PageHeader-tabNav, .PageHeader-tabNav.tabnav {
   margin-top: var(--stack-gap-normal);
   margin-bottom: 0;
 }
